POC done on xui related journey with events and tabs.