@@ -27,7 +27,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.5.6'
   id 'com.github.ben-manes.versions' version '0.38.0'
-  id 'hmcts.ccd.sdk' version '0.24.8'
+  id 'hmcts.ccd.sdk' version '0.25.16'
   id 'au.com.dius.pact' version '4.1.7'
 }
 
@@ -41,6 +41,8 @@ version = '0.0.1'
 ccd {
   configDir = file('ccd-definitions/definitions')
 }
+
+ext['elasticsearch.version'] = '7.17.0'
 
 sourceSets {
   functionalTest {
@@ -67,6 +69,12 @@ sourceSets {
     }
     resources.srcDir file('src/contractTest/resources')
   }
+
+  cftlib {
+    compileClasspath += sourceSets.main.output
+    runtimeClasspath += sourceSets.main.output
+  }
+
 }
 
 idea {
@@ -84,6 +92,8 @@ configurations {
   contractTestCompile.extendsFrom testCompile
   contractTestRuntime.extendsFrom testRuntime
   contractTestImplementation.extendsFrom testImplementation
+  cftlibImplementation.extendsFrom implementation
+  cftlibRuntimeOnly.extendsFrom runtimeOnly
 }
 
 tasks.withType(JavaCompile) {
@@ -237,6 +247,8 @@ repositories {
   mavenLocal()
   mavenCentral()
   maven { url 'https://jitpack.io' }
+  // Some Cftlib services still depend on jcenter
+  jcenter()
 }
 
 def versions = [
@@ -388,6 +400,8 @@ dependencies {
 
   contractTestCompile sourceSets.main.runtimeClasspath
   contractTestCompile sourceSets.test.runtimeClasspath
+
+  cftlibImplementation 'com.github.hmcts:rse-cft-lib:0.10.2'
 
 }
 
@@ -547,4 +561,47 @@ pact {
 
 static def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
+}
+
+
+task loadEnvSecrets() {
+  doLast {
+    if (!project.file('./.aat-env').exists()) {
+      new ByteArrayOutputStream().withStream { os ->
+        exec {
+          commandLine 'az', 'keyvault', 'secret', 'show', '--vault-name', 'nfdiv-aat', '-o', 'tsv', '--query', 'value', '--name', 'nfdiv-case-api-dot-env'
+          standardOutput = os
+        }
+        project.file('./.aat-env').write(new String(os.toString().replace('\n', '').decodeBase64(), java.nio.charset.StandardCharsets.UTF_8))
+      }
+    }
+  }
+}
+
+task buildCCDXlsx(type: Exec, dependsOn: generateCCDConfig) {
+  group 'ccd tasks'
+  commandLine './bin/ccd-build-definition.sh'
+  inputs.dir layout.buildDirectory.dir('definitions')
+  outputs.dir layout.buildDirectory.dir('ccd-config')
+}
+
+task bootWithCcd(type: org.springframework.boot.gradle.tasks.run.BootRun, dependsOn: [buildCCDXlsx, loadEnvSecrets], group: 'ccd tasks') {
+  classpath sourceSets.cftlib.runtimeClasspath
+  mainClass = 'uk.gov.hmcts.reform.adoption.RunWithCft'
+  doFirst() {
+    // Required by Access Management for Java 17.
+    // https://github.com/x-stream/xstream/issues/101
+    ['java.lang', 'java.util', 'java.lang.reflect', 'java.text', 'java.awt.font'].each {
+      jvmArgs('--add-opens', "java.base/${it}=ALL-UNNAMED")
+    }
+    jvmArgs('--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED')
+    jvmArgs('-XX:ReservedCodeCacheSize=64m')
+
+    project.file('./.aat-env').readLines().each() {
+      def index = it.indexOf("=")
+      def key = it.substring(0, index)
+      def value = it.substring(index + 1)
+      environment key, value
+    }
+  }
 }
